--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
-    "mysql-model": "0.0.3"
+    "mysql": "^2.15.0"
   }
 }
